Bug 102542 - mesa-17.2.0/src/gallium/state_trackers/nine/nine_ff.c:1938: bad assignment ?
Summary: mesa-17.2.0/src/gallium/state_trackers/nine/nine_ff.c:1938: bad assignment ?
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: 17.2
Hardware: Other All
: medium normal
Assignee: Axel Davy
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-09-05 09:04 UTC by dcb314
Modified: 2018-04-03 17:48 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description dcb314 2017-09-05 09:04:43 UTC
mesa-17.2.0/src/gallium/state_trackers/nine/nine_ff.c:1938]: (style) Boolean value assigned to floating point variable.

Source code is

       dst[39 + l * 8].w = (l + 1) == context->ff.num_lights_active;
Comment 1 Axel Davy 2017-09-05 09:20:58 UTC
As mentionned, this is just a style issue, because the conversion is implicit.

I'll push a patch to make the conversion explicit.
Comment 2 Timothy Arceri 2018-03-07 06:30:08 UTC
Can we close this now Axel?
Comment 3 Axel Davy 2018-03-07 07:14:08 UTC
It seems I forgot to push such a patch. Thanks for reminding me.
Comment 5 Juan A. Suarez 2018-04-03 17:48:11 UTC
The patch is already on upstream. Closing this.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.